--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
   </head>
   <body ng-controller="mainController">
     <div class="pure-g">
-      <div class="pure-u-1 pure-u-md-2-5">
+      <div class="pure-u-2-5">
         <div class="content-box">
           <h1>Buscador Ubícate</h1>
           
@@ -39,9 +39,23 @@
         </div>
       </div>
 
-      <div class="pure-u-1 pure-u-md-3-5">
+      <div class="pure-u-3-5">
           <div class="content-box"> 
             <h2>Resultados</h2>
+          </div>
+          <div ng-show="selectedArea">
+            <div class="content-box">
+              <div ng-repeat="career in careers | filter:career.area=selectedArea">
+                <div ng-repeat="country in career.countries">
+                  <div class="item-search" ng-repeat="university in country.universities">
+                    <p><strong>Carrera:</strong> {{ career.name }}</p>
+                    <p><strong>Área:</strong> {{ career.area }}</p>
+                    <p><strong>País:</strong> {{ country.name }}</p>
+                    <p><strong>Universidad:</strong> {{ university }}</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
       </div>
     </div>
