--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
               <label for="">País:</label>
               <select name="country" ng-model="selectedCountry"
                 ng-options="country as country.name for country in selectedCareer.countries">
-                  <option value="">---Todos los países---</option>
+                  <option value="">---Ecuador y Perú---</option>
               </select>
             </div>
           </div>
@@ -44,7 +44,6 @@
 
       <div class="pure-u-3-5 results">
         <div class="content-box" ng-if="selectedCareer">
-
           <p>
             Estas son las universidades en 
             <strong class="itemcountry" 
