--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Buscador Ubícate</title>
     <link rel="stylesheet" href="css/styles.css">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, width=device-width, user-scalable=no">
   </head>
   <body ng-controller="mainController">
     <h1 class="txt-center">Buscador Ubícate</h1>
